--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
-    "    capitalised_destinations"
+    "    capitalised_destinations = []\n",
+    "    for des"
    ]
   },
   {
