--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    capitalised_destinations = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitali"
+    "        capitalised_destinations"
    ]
   },
   {
