automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "def capitalize_countries():\n",
     "    capitalised_destinations = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalised_destinations"
+    "        capitalised_destinations.append(destination.title())"
    ]
   },
   {
