--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,8 @@
     "def capitalize_countries():\n",
     "    capitalised_destinations = []\n",
     "    for destination in travel_destinations:\n",
-    "        capitalised_destinations.append(destination.title())"
+    "        capitalised_destinations.append(destination.title())\n",
+    "        "
    ]
   },
   {
