--- a/index.ipynb
+++ b/index.ipynb
@@ -226,7 +226,7 @@
     "    capitalised_destinations = []\n",
     "    for destination in travel_destinations:\n",
     "        capitalised_destinations.append(destination.title())\n",
-    "        "
+    "    return capitalise"
    ]
   },
   {
